fix some css of wrap

--- a/test gpt/css/style.css
+++ b/test gpt/css/style.css
@@ -42,8 +42,8 @@ html, body {
     flex-direction: column;
     align-items: center; 
     justify-content: center; 
-    height: calc(100vh - 60px); 
-    padding: 20px;
+    height: calc(100% - 50px); 
+    padding: 100px;
     box-sizing: border-box;
     text-align: center;
 }
